kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autograder-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autograder-web
  template:
    metadata:
      labels:
        app: autograder-web
    spec:
      containers:
        - name: autograder-gke-web
          image: gcr.io/formidable-gate-337712/autograder-web:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5

        - name: cloud-sql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.28.0
          command:
            - "/cloud_sql_proxy"
            - "-instances=formidable-gate-337712:us-west2:cs170-db=tcp:5432"
            - "-enable_iam_login"
            - "-ip_address_types=PRIVATE"
          securityContext:
            runAsNonRoot: true
      serviceAccountName: autograder-web
