kubernetes/grpc-loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: autograder-web
  ports:
  - protocol: TCP
    port: 6000
    targetPort: 6000
