kubernetes/scaler.yaml
apiVersion: v1
kind: Service
metadata:
  name: judge-scaler
spec:
  ports:
    - port: 6000
      targetPort: 6000
  selector:
    app: judge-scaler
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: judge-scaler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: judge-scaler
  template:
    metadata:
      labels:
        app: judge-scaler
    spec:
      containers:
        - name: scaler
          image: gcr.io/formidable-gate-337712/autograder-judge-scaler:latest
          ports:
            - containerPort: 6000
        - name: cloud-sql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.28.0
          command:
            - "/cloud_sql_proxy"
            - "-instances=formidable-gate-337712:us-west2:cs170-db=tcp:5432"
            - "-enable_iam_login"
            - "-ip_address_types=PRIVATE"
          securityContext:
            runAsNonRoot: true
      serviceAccountName: autograder-web
