kubernetes/web-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-frontend
  annotations:
    cloud.google.com/app-protocols: '{"grpc":"HTTP2"}'
    cloud.google.com/backend-config: '{"default": "backend-config"}'
spec:
  selector:
    app: autograder-web
  type: NodePort
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: grpc
      port: 6000
      targetPort: 6000
